update the generated API to the latest
