# go/api/model_colorfront_config.go
@@ -28,8 +28,6 @@ type ColorfrontConfig struct {
 	TvMode *ColorfrontTvMode `json:"tvMode,omitempty"`
 	LiveMode *ColorfrontLiveMode `json:"liveMode,omitempty"`
 	UpmapMode *ColorfrontUpmapMode `json:"upmapMode,omitempty"`
-	// Setting to enable ARRI WVO to LogC4 Decoder on Input
-	EnableArriWVOLogC4Decoder *bool `json:"enableArriWVOLogC4Decoder,omitempty"`
 }
 
 // NewColorfrontConfig instantiates a new ColorfrontConfig object
@@ -44,8 +42,6 @@ func NewColorfrontConfig() *ColorfrontConfig {
 	this.OutDynRangeGamut = &outDynRangeGamut
 	var mode ColorfrontMode = COLORFRONTMODE_TV
 	this.Mode = &mode
-	var enableArriWVOLogC4Decoder bool = false
-	this.EnableArriWVOLogC4Decoder = &enableArriWVOLogC4Decoder
 	return &this
 }
 
@@ -60,8 +56,6 @@ func NewColorfrontConfigWithDefaults() *ColorfrontConfig {
 	this.OutDynRangeGamut = &outDynRangeGamut
 	var mode ColorfrontMode = COLORFRONTMODE_TV
 	this.Mode = &mode
-	var enableArriWVOLogC4Decoder bool = false
-	this.EnableArriWVOLogC4Decoder = &enableArriWVOLogC4Decoder
 	return &this
 }
 
@@ -310,41 +304,6 @@ func (o *ColorfrontConfig) SetUpmapMode(v ColorfrontUpmapMode) {
 	o.UpmapMode = &tmp
 }
 
-// GetEnableArriWVOLogC4Decoder returns the EnableArriWVOLogC4Decoder field value if set, zero value otherwise.
-func (o *ColorfrontConfig) GetEnableArriWVOLogC4Decoder() bool {
-	if o == nil || o.EnableArriWVOLogC4Decoder == nil {
-		var ret bool
-		return ret
-	}
-	return *o.EnableArriWVOLogC4Decoder
-}
-
-// GetEnableArriWVOLogC4DecoderOk returns a tuple with the EnableArriWVOLogC4Decoder field value if set, nil otherwise
-// and a boolean to check if the value has been set.
-func (o *ColorfrontConfig) GetEnableArriWVOLogC4DecoderOk() (*bool, bool) {
-	if o == nil || o.EnableArriWVOLogC4Decoder == nil {
-		return nil, false
-	}
-	return o.EnableArriWVOLogC4Decoder, true
-}
-
-
-
-// HasEnableArriWVOLogC4Decoder returns a boolean if a field has been set.
-func (o *ColorfrontConfig) HasEnableArriWVOLogC4Decoder() bool {
-	if o != nil && o.EnableArriWVOLogC4Decoder != nil {
-		return true
-	}
-
-	return false
-}
-
-// SetEnableArriWVOLogC4Decoder gets a reference to the given bool and assigns it to the EnableArriWVOLogC4Decoder field.
-func (o *ColorfrontConfig) SetEnableArriWVOLogC4Decoder(v bool) {
-	tmp := v
-	o.EnableArriWVOLogC4Decoder = &tmp
-}
-
 func (o ColorfrontConfig) MarshalJSON() ([]byte, error) {
 	toSerialize := map[string]interface{}{}
 	if o.Enabled != nil {
@@ -367,9 +326,6 @@ func (o ColorfrontConfig) MarshalJSON() ([]byte, error) {
 	}
 	if o.UpmapMode != nil {
 		toSerialize["upmapMode"] = o.UpmapMode
-	}
-	if o.EnableArriWVOLogC4Decoder != nil {
-		toSerialize["enableArriWVOLogC4Decoder"] = o.EnableArriWVOLogC4Decoder
 	}
 	return json.Marshal(toSerialize)
 }
